@@ -28,6 +28,7 @@
 
 #include "maths/nrational.h"
 #include <cfloat>
+#include <sstream>
 
 namespace regina {
 
@@ -278,6 +279,24 @@ std::ostream& operator << (std::ostream& out, const NRational& rat) {
         out << rat.getNumerator();
     else
         out << rat.getNumerator() << '/' << rat.getDenominator();
+    return out;
+}
+
+std::string NRational::getTeX() const {
+    std::ostringstream out;
+    writeTeX(out);
+    return out.str();
+}
+
+std::ostream& NRational::writeTeX(std::ostream &out) const {
+    if (flavour == NRational::f_infinity)
+        out << "\\infty";
+    else if (flavour == NRational::f_undefined)
+        out << "0/0";
+    else if (getDenominator() == 1)
+        out << getNumerator();
+    else
+        out << "\\frac{" << getNumerator() << "}{" << getDenominator() << "}";
     return out;
 }
 
